rackula/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: rackula
  name: rackula
spec:
  finalizers:
    - kubernetes
